# mastodon-feed-amalgamator

./: .gitignore  Dockerfile  Makefile  README.md  package.json  pyproject.toml  sonar-project.properties
.github/workflows/: Deployment_Workflow.yml  Documentation_Generator.yml  lint.yml  python-tests.yml  static-analysis.yml
docs/: conf.py  feed_amalgamator.rst  modules.rst
docs/_build/doctrees/: environment.pickle  feed_amalgamator.constants.doctree  feed_amalgamator.doctree  feed_amalgamator.helpers.doctree  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  feed_amalgamator.constants.html  feed_amalgamator.helpers.html  feed_amalgamator.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
feed_amalgamator/: __init__.py  about.py  auth.py  feed.py
feed_amalgamator/constants/: common_constants.py  error_messages.py
feed_amalgamator/helpers/: custom_exceptions.py  db_interface.py  error_handler.py  logging_helper.py  mastodon_data_interface.py  mastodon_oauth_interface.py
feed_amalgamator/static/: about.css  auth.css  auth.js  feed.css  package.json  style.css
feed_amalgamator/templates/: base.html
feed_amalgamator/templates/about/: about.html
feed_amalgamator/templates/auth/: login.html  register.html
feed_amalgamator/templates/feed/: add_server.html  delete_server.html  home.html
specs/Slide_Decks/Interim_Deck/: Team 4 _ Feed Amalgamator.pptx
specs/Slide_Decks/Pitch/: Pitch.pptx
tests/: test_auth_page.py  test_feed_page.py  test_mastodon_oauth_interface.py
(+12 files in other folders)
